...
                        android:fontFamily="@font/mclaren"
                        android:text="Titolo"
                        android:textColor="@color/black"
                        android:textSize="19sp" />

                    <EditText
                        android:id="@+id/et_titolo"
                        android:layout_width="488dp"
                        android:layout_height="wrap_content"
                        android:layout_alignStart="@id/tv_titolo"
                        android:layout_marginStart="120dp"
                        android:fontFamily="@font/mclaren"
                        android:hint="Titolo"
...
                        android:fontFamily="@font/mclaren"
                        android:text="Data"
                        android:textColor="@color/black"
                        android:textSize="19sp" />

                    <EditText
                        android:id="@+id/et_data"
                        android:layout_width="488dp"
                        android:layout_height="wrap_content"
                        android:layout_alignStart="@id/tv_data"
                        android:layout_marginStart="120dp"
                        android:clickable="false"
                        android:cursorVisible="false"
...
                        android:fontFamily="@font/mclaren"
                        android:text="Ora"
                        android:textColor="@color/black"
                        android:textSize="19sp" />

                    <EditText
                        android:id="@+id/et_ora"
                        android:layout_width="488dp"
                        android:layout_height="wrap_content"
                        android:layout_alignStart="@id/tv_ora"
                        android:layout_marginStart="120dp"
                        android:clickable="false"
                        android:cursorVisible="false"
...
                        android:fontFamily="@font/mclaren"
                        android:text="Dove"
                        android:textColor="@color/black"
                        android:textSize="19sp" />

                    <EditText
                        android:id="@+id/et_luogo"
                        android:layout_width="488dp"
                        android:layout_height="wrap_content"
                        android:layout_alignStart="@id/tv_luogo"
                        android:layout_marginStart="120dp"
                        android:fontFamily="@font/mclaren"
                        android:hint="Esempio"
...
                        android:fontFamily="@font/mclaren"
                        android:text="Cerchiamo"
                        android:textColor="@color/black"
                        android:textSize="19sp" />

                    <TextView
                        android:id="@+id/multiselect_ruoli"
                        android:layout_width="488dp"
                        android:layout_height="wrap_content"
                        android:layout_alignStart="@id/tv_ruoli_cercati"
                        android:layout_marginStart="120dp"
                        android:layout_marginTop="12dp"
                        android:fontFamily="@font/mclaren"
...
                        android:fontFamily="@font/mclaren"
                        android:text="Quanti"
                        android:textColor="@color/black"
                        android:textSize="19sp" />

                    <com.google.android.material.slider.Slider
                        android:id="@+id/slider_giocatori"
                        android:layout_width="488dp"
                        android:layout_height="wrap_content"
                        android:layout_alignStart="@id/tv_numero_giocatori"
                        android:layout_marginStart="120dp"
                        android:contentDescription="slider numero giocatori"
                        android:stepSize="1"
...
                        android:gravity="center"
                        android:text="Descrizione"
                        android:textColor="@color/black"
                        android:textSize="19sp" />

                    <EditText
                        android:id="@+id/et_descrizione"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_below="@id/tv_descrizione"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/mclaren"
                        android:hint="Inserisci una descrizione..."
...
